FIxed button spacing

--- a/src/app/messages/messages.component.sass
+++ b/src/app/messages/messages.component.sass
@@ -53,3 +53,6 @@
 
 .loading-container
   margin: 10px
+
+.btn
+  margin-top: 5px
